--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.35.3",
@@ -30,7 +30,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@uploadthing/react": "^5.6.1",
+    "@uploadthing/react": "^5.7.0",
     "ai": "^2.2.13",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -48,11 +48,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.46.2",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^8.0.7",
-    "react-pdf": "^7.3.3",
-    "react-resize-detector": "^9.1.0",
+    "react-pdf": "^7.7.1",
+    "react-resize-detector": "^9.1.1",
     "react-textarea-autosize": "^8.5.3",
     "simplebar-react": "^3.2.4",
     "stripe": "^13.7.0",
@@ -60,8 +61,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uploadthing": "^5.6.1",
-    "zod": "^3.21.4"
+    "uploadthing": "^5.7.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
